--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
 
     "devDependencies": {
         "vite": "^5.2.8"
+    },
+
+    "imports": {
+        "#utils/*": "./src/utils/*.js"
     }
 }
